Se agregaron métodos en SubsidiaryService y SubsidiaryServiceImpl para obtener sucursales gestionadas por un usuario específico y por estado, incluyendo validaciones para la existencia del usuario.